--- a/costMile.html
+++ b/costMile.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Cost 1 Mile for the user's car </title>
+    <title> Cost 1 Mile for the user's cars </title>
 </head>
 <body>
     <h1> Cost 1 Mile for car </h1>
 	<h2>  We help you to find the cost of 1 Mile for 1 car or for 2 cars and to compare these costs </h2>
+	
     <script>
+	    
     var car = {}; //Created empty object 'car' to store information that will be received from the user
    
     var createFullCarObject = function () {  // Created a function to fill object 'car' for car 1 
